--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@dojo/i18n": "~0.2.0"
   },
   "devDependencies": {
+    "@dojo/cli": "^0.2.0",
     "@dojo/cli-build-webpack": "~0.2.0",
     "@dojo/cli-test-intern": "~0.2.0",
     "@dojo/interfaces": "~0.1.0",
@@ -22,6 +23,15 @@
     "@types/sinon": "^1.16.35",
     "intern": "~4.1.4",
     "sinon": "^2.0.0",
-    "typescript": "~2.4.1"
+    "typescript": "~2.6.2",
+    "webserv": "^0.12.0"
+  },
+  "scripts": {
+    "docker-build": "docker build -t jit-tests-app .",
+    "docker-run": "docker run --name jit -p 8888:8888 jit-tests-app",
+    "docker-dev": "docker run --name jit -p 8888:8888 -v `pwd`/src:/app/src jit-tests-app",
+    "docker-sh": "docker exec -it jit /bin/bash",
+    "docker-stop": "docker stop jit",
+    "serve": "webserv"
   }
 }
