--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@dojo/i18n": "~0.2.0"
   },
   "devDependencies": {
-    "@dojo/cli": "^0.2.0",
-    "@dojo/cli-build-webpack": "~0.2.0",
-    "@dojo/cli-test-intern": "~0.2.0",
+    "@dojo/cli": "^0.4.1",
+    "@dojo/cli-build-webpack": "~0.4.0",
+    "@dojo/cli-test-intern": "./vendor/dojo-cli-test-intern-0.3.1-rc.1.tgz",
     "@dojo/interfaces": "~0.1.0",
     "@dojo/loader": "~0.1.0",
     "@dojo/test-extras": "~0.2.0",
@@ -21,7 +21,9 @@
     "@types/grunt": "~0.4.0",
     "@types/node": "^6.0.46",
     "@types/sinon": "^1.16.35",
+    "css-modules-require-hook": "^4.2.3",
     "intern": "~4.1.4",
+    "postcss": "^6.0.16",
     "sinon": "^2.0.0",
     "typescript": "~2.6.2",
     "webserv": "^0.12.0"
@@ -29,7 +31,7 @@
   "scripts": {
     "docker-build": "docker build -t jit-tests-app .",
     "docker-run": "docker run --name jit -p 8888:8888 jit-tests-app",
-    "docker-dev": "docker run --name jit -p 8888:8888 -v `pwd`/src:/app/src jit-tests-app",
+    "docker-dev": "docker run --name jit -p 8888:8888 -v `pwd`/src:/app/src -v `pwd`/tests:/app/tests -v `pwd`/support:/app/support jit-tests-app",
     "docker-sh": "docker exec -it jit /bin/bash",
     "docker-stop": "docker stop jit",
     "serve": "webserv"
